appveyor: macos [skip actions]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,45 +6,25 @@
   platform:
     - x64
 
-  init:
-    - ps: $env:PKG_VERSION = $env:APPVEYOR_REPO_COMMIT.SubString(0,8)
-
   environment:
     CYG_BASH: '%CYG_ROOT%/bin/bash -lc'
     OPAM_PACKAGES: 'calendars camlp5.8.00.01 cppo dune.2.9.0 jingoo markup piqi piqilib ppx_blob stdlib-shims syslog unidecode.0.2.0 uucp uutf uunf'
     matrix:
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-        CYG_ROOT: C:/cygwin64
-        PKG_OS: win64
-      - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
-        PKG_OS: linux
       - APPVEYOR_BUILD_WORKER_IMAGE: macos-mojave
         PKG_OS: macos-10.14
       - APPVEYOR_BUILD_WORKER_IMAGE: macos
         PKG_OS: macos-10.15
 
   install:
-    # windows environnement
-    - cmd: 'choco install -y innosetup'
-    - cmd: 'set OPAMYES=1'
-    - cmd: 'set PATH=%PATH%;%CYG_ROOT%\usr\x86_64-w64-mingw32\sys-root\mingw\bin'
-    - cmd: '%CYG_ROOT%\setup-x86_64.exe -qnNdO -R %CYG_ROOT% -s http://cygwin.mirror.constant.com -l %CYG_ROOT%/var/cache/setup -P rsync -P patch -P diffutils -P unzip -P m4 -P mingw64-x86_64-gcc-core -P mingw64-x86_64-gmp -P perl-IPC-System-Simple'
-    - cmd: '%CYG_BASH% "curl -fsSL -o opam64.tar.xz https://github.com/fdopen/opam-repository-mingw/releases/download/0.0.0.2/opam64.tar.xz"'
-    - cmd: '%CYG_BASH% "tar -xf opam64.tar.xz && opam64/install.sh"'
-    - cmd: '%CYG_BASH% "opam init -a mingw https://github.com/fdopen/opam-repository-mingw.git#opam2 -c 4.09.1+mingw64c --disable-sandboxing"'
-    - cmd: '%CYG_BASH% "opam update"'
-    - cmd: '%CYG_BASH% "opam install ${OPAM_PACKAGES}"'
-    - cmd: '%CYG_BASH% "eval $(ocaml-env cygwin)"'
     # unix environnement
     - sh: 'export OPAMYES=1'
     - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then sudo chown -R appveyor:staff $HOME/.cache; fi;'
     - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew update; fi;'
     - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew install opam; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpan install String::ShellQuote; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpan install IPC::System::Simple; fi;'
-    - sh: 'if [[ "$PKG_OS" == "linux" ]]; then sudo add-apt-repository ppa:avsm/ppa; fi;'
-    - sh: 'if [[ "$PKG_OS" == "linux" ]]; then sudo sudo apt-get update; fi;'
-    - sh: 'if [[ "$PKG_OS" == "linux" ]]; then sudo apt-get install -qq opam libstring-shellquote-perl; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew install cpanm; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib); fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpanm String::ShellQuote; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpanm IPC::System::Simple; fi;'
     - sh: 'opam init --compiler=4.09.1'
     - sh: 'eval $(opam config env)'
     - sh: 'opam update'
@@ -52,23 +32,3 @@
 
   build_script:
     - sh : 'ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib'
-    - sh : 'zip -r geneweb-$PKG_OS-$PKG_VERSION.zip distribution/*'
-    - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib"'
-    - cmd: 'iscc geneweb.iss'
-    - cmd: 7z a geneweb-%PKG_OS%-%PKG_VERSION%.zip %APPVEYOR_BUILD_FOLDER%\distribution
-
-  artifacts:
-    - path: geneweb-%PKG_OS%-%PKG_VERSION%.zip
-      name: GeneWeb with default options
-    - path: geneweb-win64-%PKG_VERSION%-installer.exe
-      name: Win64 installer for GeneWeb
-
-  deploy:
-    release: 'Geneweb %PKG_VERSION%'
-    description: 'Geneweb %PKG_VERSION% built by appveyor'
-    provider: GitHub
-    auth_token:
-      secure: fMXpYzNO3X61MnpDkjGw8NiI53HYiaSTgzpvYo5qj8TIBBy7O2+lqVVSCxxqqu3h
-    artifact: /geneweb-%PKG_OS%-%PKG_VERSION%.zip|geneweb-win64-%PKG_VERSION%-installer.exe/
-    draft: false
-    prerelease: true
