opam: change constraint on camlp5

--- a/geneweb.opam
+++ b/geneweb.opam
@@ -20,7 +20,7 @@ build: [
 depends: [
   "benchmark"
   "calendars"
-  "camlp5" { = "8.00.01" }
+  "camlp5" { >= "8.00.01" }
   "cppo"
   "dune" { = "2.9.0" }
   "jingoo"
