Fixed opam file, sync appveyor with opam options

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,7 +54,7 @@
     - sh: 'opam install $OPAM_PACKAGES'
 
   build_script:
-    - sh : 'ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib'
+    - sh : 'ocaml ./configure.ml --release && make clean distrib'
     - sh : 'zip -r geneweb-$PKG_OS-$PKG_VERSION.zip distribution/*'
     - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib"'
     - cmd: 'iscc geneweb.iss'
