--- a/geneweb.opam
+++ b/geneweb.opam
@@ -13,8 +13,8 @@ dev-repo: "git://github.com/geneweb/geneweb"
 bug-reports: "https://github.com/geneweb/geneweb/issues"
 
 build: [
-  [ "ocaml" "./configure.ml" ]
-  [ "dune" "build" "-p" name "-j" jobs ]
+  [ "ocaml" "./configure.ml" "--release" ]
+  [ make "build" ]
 ]
 
 depends: [
