.github/workflows/doc.yml: fixed ocaml version

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Use OCaml ${{ matrix.ocaml-version }}
+      - name: Use OCaml 4.13.1
         uses: avsm/setup-ocaml@v1
         with:
-          ocaml-version: ${{ matrix.ocaml-version }}
+          ocaml-version: 4.13.1
 
       - name: Install GeneWeb depenencies
         run: |
