--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,7 +29,9 @@ jobs:
              opam install geneweb --deps-only
 
       - name: Generate documentation
-        run: opam exec -- make doc
+        run: |
+             ocaml ./configure.ml
+             opam exec -- make doc
 
       - name: Deploy documentation
         uses: JamesIves/github-pages-deploy-action@v4.2.3
