moved some functions to a files module + moved secure out of util to system_util

--- a/bin/gwrepl/dune.in
+++ b/bin/gwrepl/dune.in
@@ -8,6 +8,7 @@
     geneweb_core
     geneweb_def
     geneweb_util
+    geneweb_system_util
     geneweb_gwdb
     %%%GWDB_PKG%%%
     %%%SOSA_PKG%%%
