--- a/lib/gwdb-legacy/dune
+++ b/lib/gwdb-legacy/dune
@@ -1,7 +1,34 @@
 (library
- (name gwdb_legacy)
- (public_name geneweb.gwdb-legacy)
- (implements geneweb.gwdb_driver)
- (libraries geneweb.def geneweb.util re unix)
- (modules_without_implementation dbdisk)
- (modules btree database dbdisk dutil gwdb_driver gwdb_gc iovalue outbase))
+  (name gwdb_legacy)
+  (public_name geneweb.gwdb-legacy)
+  (implements geneweb.gwdb_driver)
+  (libraries
+;;    geneweb.def
+      geneweb.util
+      geneweb.system_util
+;;    re
+      unix
+  )
+  (modules_without_implementation dbdisk)
+  (modules
+    btree
+    database
+    dbdisk
+    dutil
+    gwdb_driver
+    gwdb_gc
+    iovalue
+    outbase
+  )
+  (private_modules
+    btree
+    database
+    dbdisk
+    dutil
+;;    gwdb_driver
+    gwdb_gc
+    iovalue
+    outbase
+  )
+)
+
