--- a/lib/dune.in
+++ b/lib/dune.in
@@ -16,6 +16,7 @@
             geneweb_gwdb
             geneweb_sosa_mli
             geneweb_util
+	    geneweb_system_util
             markup)
  (modules_without_implementation templAst)
 )
