--- a/lib/gwdb-legacy/dune
+++ b/lib/gwdb-legacy/dune
@@ -3,10 +3,11 @@
   (public_name geneweb.gwdb-legacy)
   (implements geneweb.gwdb_driver)
   (libraries
-    geneweb.def
-    geneweb.util
-    re
-    unix
+;;    geneweb.def
+      geneweb.util
+      geneweb.system_util
+;;    re
+      unix
   )
   (modules_without_implementation dbdisk)
   (modules
@@ -15,6 +16,16 @@
     dbdisk
     dutil
     gwdb_driver
+    gwdb_gc
+    iovalue
+    outbase
+  )
+  (private_modules
+    btree
+    database
+    dbdisk
+    dutil
+;;    gwdb_driver
     gwdb_gc
     iovalue
     outbase
