handle multiple implementations of base structures

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ lib/dune
 lib/gwdb/dune
 lib/util/dune
 plugins/welcome/dune
+lib/gwdb-legacy/dune
+lib/gwdb-versioned/dune
+lib/system_util/dune
 test/dune
 
 dune-workspace
