--- a/lib/gwdb-legacy/dune.in
+++ b/lib/gwdb-legacy/dune.in
@@ -1,12 +1,15 @@
 (library
   (name gwdb_legacy)
   (public_name geneweb.gwdb-legacy)
+#ifdef GENEWEB_GWDB_LEGACY
   (implements geneweb.gwdb_driver)
+#endif
   (libraries
-;;    geneweb.def
+      geneweb.def
       geneweb.util
       geneweb.system_util
-;;    re
+;;      geneweb.dsk_format
+      re
       unix
   )
   (modules_without_implementation dbdisk)
@@ -23,12 +26,9 @@
   (private_modules
     btree
     database
-    dbdisk
     dutil
-;;    gwdb_driver
     gwdb_gc
     iovalue
     outbase
   )
 )
-
