gnwb25 fake impl + collections and markers moved to common + driver sig

--- a/lib/def/dune.in
+++ b/lib/def/dune.in
@@ -4,4 +4,5 @@
  (libraries re)
  (modules adef def gwdb_driver_sig common)
  (wrapped false)
+ (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
 )
