--- a/lib/gwdb-legacy/dune
+++ b/lib/gwdb-legacy/dune
@@ -18,7 +18,6 @@
     gwdb_gc
     iovalue
     outbase
-    gwdb_driver_legacy
     translate
   )
   (private_modules
@@ -29,6 +28,6 @@
     gwdb_gc
     iovalue
     outbase
-    gwdb_driver_legacy
+    translate
   )
 )
