--- a/lib/def/dune.in
+++ b/lib/def/dune.in
@@ -2,7 +2,7 @@
  (name geneweb_def)
  (public_name geneweb.def)
  (libraries re)
- (modules adef def gwdb_driver_sig)
+ (modules adef def)
  (wrapped false)
  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
 )
