--- a/lib/gwdb-versioned/dune
+++ b/lib/gwdb-versioned/dune
@@ -5,13 +5,14 @@
   (libraries
 	geneweb.gwdb-legacy
 	geneweb.def
+	geneweb.dsk_format
   )
   (modules
 	gwdb_driver
 	gwdb_gnwb25
-  	dsk_format
-	format
-	partition
-	version
+  	;;dsk_format
+	;;format
+	;;partition
+	;;version
   )
 )
