--- a/lib/gwdb-versioned/dune.in
+++ b/lib/gwdb-versioned/dune.in
@@ -11,10 +11,15 @@
   (modules
 	gwdb_driver
 	gwdb_gnwb25
+	formats
   	;;dsk_format
 	;;format
 	;;partition
 	;;version
+  )
+  (private_modules
+	formats
+	gwdb_gnwb25
   )
 )
 #endif
