boiler plate for gwb26

--- a/lib/gwdb-versioned/dune.in
+++ b/lib/gwdb-versioned/dune.in
@@ -11,6 +11,7 @@
   (modules
 	gwdb_driver
 	gwdb_gnwb25
+	gwdb_gnwb26
 	gw_formats
   	;;dsk_format
 	;;format
@@ -20,6 +21,7 @@
   (private_modules
 	gw_formats
 	gwdb_gnwb25
+	gwdb_gnwb26
   )
 )
 #endif
