--- a/lib/gwdb-versioned/dune
+++ b/lib/gwdb-versioned/dune
@@ -10,6 +10,7 @@
   (modules
 	gwdb_driver
 	gwdb_gnwb25
+	gwdb_gnwb26
 	gw_formats
   	;;dsk_format
 	;;format
@@ -19,5 +20,6 @@
   (private_modules
 	gw_formats
 	gwdb_gnwb25
+	gwdb_gnwb26
   )
 )
