--- a/lib/gwdb-versioned/dune
+++ b/lib/gwdb-versioned/dune
@@ -16,10 +16,12 @@
 	;;format
 	;;partition
 	;;version
+	translate
   )
   (private_modules
 	gw_formats
 	gwdb_gnwb25
 	gwdb_gnwb26
+	translate
   )
 )
