--- a/lib/gwdb-legacy/dune.in
+++ b/lib/gwdb-legacy/dune.in
@@ -8,7 +8,7 @@
       geneweb.def
       geneweb.util
       geneweb.system_util
-      geneweb.dsk_format
+;;      geneweb.dsk_format
       re
       unix
   )
