--- a/lib/system_util/dune.in
+++ b/lib/system_util/dune.in
@@ -3,5 +3,5 @@
  (public_name geneweb.system_util)
  (wrapped false)
  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
- (libraries)
+ (libraries unix)
 )
