camlp-streams dep

--- a/geneweb.opam
+++ b/geneweb.opam
@@ -17,6 +17,7 @@ depends: [
   "benchmark"
   "calendars"
   "camlp5" {>= "8.00.01"}
+  "camlp-streams"
   "cppo"
   "dune" {>= "2.8" & >= "2.9.0"}
   "jingoo"
