--- a/lib/def/dune
+++ b/lib/def/dune
@@ -1,7 +1,6 @@
 (library
  (name geneweb_def)
  (public_name geneweb.def)
- (libraries re)
- (modules adef def gwdb_driver_sig common)
+ (modules adef def)
  (wrapped false)
 )
