--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,6 @@
         PKG_OS: win64
       - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
         PKG_OS: linux
-      - APPVEYOR_BUILD_WORKER_IMAGE: macos-mojave
-        PKG_OS: macos-10.14
       - APPVEYOR_BUILD_WORKER_IMAGE: macos
         PKG_OS: macos-10.15
 
@@ -36,14 +34,14 @@
     - cmd: '%CYG_BASH% "opam install ${OPAM_PACKAGES}"'
     # unix environnement
     - sh: 'export OPAMYES=1'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then sudo chown -R appveyor:staff $HOME/.cache; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew update; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew install wget; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew install opam; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then brew install cpanm; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib); fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpanm String::ShellQuote; fi;'
-    - sh: 'if [[ "$PKG_OS" == "macos-10.14" || "$PKG_OS" == "macos-10.15" ]]; then cpanm IPC::System::Simple; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then sudo chown -R appveyor:staff $HOME/.cache; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then brew update; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then brew install wget; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then brew install opam; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then brew install cpanm; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib); fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then cpanm String::ShellQuote; fi;'
+    - sh: 'if [[ "$PKG_OS" == "macos-10.15" ]]; then cpanm IPC::System::Simple; fi;'
     - sh: 'if [[ "$PKG_OS" == "linux" ]]; then sudo add-apt-repository ppa:avsm/ppa; fi;'
     - sh: 'if [[ "$PKG_OS" == "linux" ]]; then sudo sudo apt-get update; fi;'
     - sh: 'if [[ "$PKG_OS" == "linux" ]]; then sudo apt-get install -qq opam libstring-shellquote-perl; fi;'
