--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,7 +13,7 @@ on:
       - '**/*.md'
 
 env:
-  PLATFORMS: linux/arm/v7,linux/arm64/v8,linux/amd64
+  PLATFORMS: linux/arm64/v8,linux/amd64
   IMAGE_NAME: "geneweb"
   PUSH_IMAGE: ${{ github.ref == 'refs/heads/master' }}
 
