--- a/lib/sosa_array/dune
+++ b/lib/sosa_array/dune
@@ -1,5 +1,4 @@
 (library
  (name geneweb_sosa_array)
  (public_name geneweb.sosa_array)
- (implements geneweb_sosa_mli)
-)
+ (implements geneweb_sosa_mli))
