--- a/lib/sosa_num/dune
+++ b/lib/sosa_num/dune
@@ -2,5 +2,4 @@
  (name geneweb_sosa_num)
  (public_name geneweb.sosa_num)
  (libraries num)
- (implements geneweb_sosa_mli)
-)
+ (implements geneweb_sosa_mli))
