move Base64 to gwd

--- a/bin/gwd/dune.in
+++ b/bin/gwd/dune.in
@@ -38,6 +38,7 @@
   )
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
   (modules
+    base64
     gwd
     gwdPluginDep
     gwdPluginMD5
