--- a/bin/ged2gwb/dune.in
+++ b/bin/ged2gwb/dune.in
@@ -1,7 +1,13 @@
 (executable
   (name ged2gwb)
-  (public_name geneweb.ged2gwb)
+  (public_name ged2gwb)
   (modules ged2gwb)
+  (libraries ged2gwb_lib %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb))
+
+(library
+  (name ged2gwb_lib)
+  (public_name geneweb.ged2gwb_lib)
+  (modules ged2gwb_lib)
   (preprocess (action (run camlp5o pr_o.cmo pa_extend.cmo q_MLast.cmo %{input-file})))
   (libraries camlp5 unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
 )
