rename gwuLib to gwu_lib and add gwu_simple

--- a/bin/gwu/dune.in
+++ b/bin/gwu/dune.in
@@ -3,7 +3,7 @@
   (public_name geneweb.gwu_lib)
   (wrapped false)
   (libraries geneweb gwexport_lib)
-  (modules gwuLib)
+  (modules gwu_lib)
 )
 
 (executable
