gwc: add gwc_lib; clean up global state

--- a/bin/gwc/dune.in
+++ b/bin/gwc/dune.in
@@ -1,7 +1,13 @@
 (executable
   (name gwc)
   (public_name geneweb.gwc)
-  (modules gwc gwcomp db1link)
-  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
+  (modules gwc)
+  (libraries gwc_lib)
+)
+
+(library
+  (name gwc_lib)
+  (public_name geneweb.gwc_lib)
+  (modules gwc_lib state gwcomp db1link)
   (libraries unix %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
 )
