--- a/test/dune.in
+++ b/test/dune.in
@@ -5,7 +5,7 @@
   (modules gwdb_driver)
 )
 
-(executable
+(test
   (name test)
   (libraries %%%SOSA_PKG%%% dummy_gwdb geneweb geneweb_def_show oUnit stdlib-shims)
   (preprocess (pps ppx_deriving.show))
@@ -21,19 +21,9 @@
     )
 )
 
-(executable
+(test
   (name ports)
   (libraries %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb geneweb.ged2gwb_lib geneweb.gwb2ged_lib geneweb.gwexport_lib geneweb.gwu_lib geneweb.gwc_lib)
   (modules ports)
-)
-
-(rule
-  (action (run ./test.exe) )
-  (alias runtest)
-)
-
-(rule
-  (action (run ./ports.exe) )
   (deps assets/royal92.ged assets/abc.ged)
-  (alias runtest)
 )
