mv ged_v7; fix buggy merlin

--- a/bin/gedv7/dune
+++ b/bin/gedv7/dune
@@ -1,7 +1,7 @@
 (executable
- (name ged_v7)
- (public_name geneweb.ged_v7)
- (modules ged_v7)
+ (name gedv7)
+ (public_name geneweb.gedv7)
+ (modules gedv7)
  (libraries ged_v7 geneweb.gwdb-versioned geneweb_sosa_zarith geneweb))
 
 ; TODO make a dune.in
