--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           - os: macos-latest
             ocaml-version: 4.14.0
             geneweb-archive: geneweb-macos.zip
-          - os: unbuntu-latest
+          - os: ubuntu-latest
             ocaml-version: 4.14.0
             geneweb-archive: geneweb-linux.zip
           - os: windows-latest
@@ -48,7 +48,9 @@ jobs:
 
       # Build the distribution
       - name: Build the distribution
-        run: opam exec -- ocaml ./configure.ml --release && make distrib
+        run: |
+          opam exec -- ocaml ./configure.ml --release
+          opam exec -- make distrib
 
       # Archive distribution for release
       - name: Archive Release
@@ -63,5 +65,5 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ matrix.geneweb-archive }}
+          file: distribution/${{ matrix.geneweb-archive }}
           tag: ${{ github.ref }}
