--- a/bin/gwu/dune.in
+++ b/bin/gwu/dune.in
@@ -10,5 +10,5 @@
   (name gwu)
   (public_name geneweb.gwu)
   (modules gwu)
-  (libraries geneweb gwexport_lib gwu_lib str unix %%%GWDB_PKG%%% %%%SOSA_PKG%%%)
+  (libraries geneweb gwexport_lib gwu_lib str unix %%%GWDB_PKG%%%)
 )
