--- a/benchmark/dune.in
+++ b/benchmark/dune.in
@@ -1,7 +1,7 @@
 (executable
   (name bench)
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
-  (libraries unix %%%SOSA_PKG%%% %%%GWDB_PKG%%% geneweb benchmark)
+  (libraries unix %%%GWDB_PKG%%% geneweb benchmark)
 )
 
 (rule
