--- a/bin/connex/dune.in
+++ b/bin/connex/dune.in
@@ -2,5 +2,5 @@
   (names connex)
   (public_names geneweb.connex)
   (modules connex)
-  (libraries unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
+  (libraries unix str %%%GWDB_PKG%%% geneweb)
 )
