--- a/bin/fixbase/dune.in
+++ b/bin/fixbase/dune.in
@@ -2,5 +2,5 @@
   (name gwfixbase)
   (public_name geneweb.gwfixbase)
   (modules gwfixbase)
-  (libraries unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
+  (libraries unix str %%%GWDB_PKG%%% geneweb)
 )
