--- a/bin/gwc/dune.in
+++ b/bin/gwc/dune.in
@@ -3,5 +3,5 @@
   (public_name geneweb.gwc)
   (modules gwc gwcomp db1link)
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
-  (libraries unix %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
+  (libraries unix %%%GWDB_PKG%%% geneweb)
 )
