--- a/bin/update_nldb/dune.in
+++ b/bin/update_nldb/dune.in
@@ -2,5 +2,5 @@
   (names update_nldb)
   (public_names geneweb.update_nldb)
   (modules update_nldb)
-  (libraries unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
+  (libraries unix str %%%GWDB_PKG%%% geneweb)
 )
