--- a/lib/dune.in
+++ b/lib/dune.in
@@ -14,8 +14,8 @@
             geneweb_core
             geneweb_def
             geneweb_gwdb
-            geneweb_sosa_mli
             geneweb_util
-            markup)
+            markup
+            zarith)
  (modules_without_implementation templAst)
 )
