--- a/test/dune.in
+++ b/test/dune.in
@@ -7,7 +7,7 @@
 
 (executable
   (name test)
-  (libraries %%%SOSA_PKG%%% dummy_gwdb geneweb geneweb_def_show oUnit stdlib-shims)
+  (libraries dummy_gwdb geneweb geneweb_def_show oUnit stdlib-shims)
   (preprocess (pps ppx_deriving.show))
   (modules
     test
