specify calendars version

--- a/geneweb.opam
+++ b/geneweb.opam
@@ -15,7 +15,7 @@ doc: "https://geneweb.tuxfamily.org/wiki/GeneWeb"
 bug-reports: "https://github.com/geneweb/geneweb/issues"
 depends: [
   "benchmark"
-  "calendars"
+  "calendars" {= "1.0.0"}
   "camlp5" {>= "8.00.01"}
   "camlp-streams"
   "cppo"
