Update GitHub actions from avsm/setup-ocaml@v1 to ocaml/setup-ocaml@v2
This fixes CI errors for two GitHub actions.

Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -10,9 +10,9 @@ jobs:
       - name: checkout-code
         uses: actions/checkout@v3
       - name: setup-ocaml
-        uses: avsm/setup-ocaml@v1
+        uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-version: 4.14.0
+          ocaml-compiler: 4.14.0
       - name: setup
         run: |
              opam pin add . -y --no-action
